# projet-2022-2023-ECE-world-X

./: .gitignore  CMakeLists.txt  Display_all.c  Duck.c  Duck.h  Player_crosshair.h  Ship.h  Ships.c  Start_and_images.c  Start_and_images.h  Timer.c  Timer_and_turret.c  Turret_and_timer.h  Winner.c  beatmap.c  beatmap.h  boat.c  boat.h  cane.c  cane.h  const.h  constante.h  constantes.h  countdown.c  duck.c  duck.h  duckGame.c  duckGame.h  ingame.c  ingame.h  interface.c  interface.h  main.c  menu.c  menu.h  miam.c  miam.h  music.c  music.h  osugame.c  (+7 more)
Canard/: CoingCoing.c  CoingCoing.h
DuckGame/: CMakeLists.txt  Duck.c  Duck.h  boat.c  cane.c  cane.h  constantes.h  duckGame.c
Jackpot/: Roll_and_handle.c  Roll_and_handle.h  const2.h  const_jackpot.h  game_jackpot.c
JarJar/: .gitignore  Duck.c  Duck.h  boat.c  boat.h  cane.c  cane.h  constantes.h  duckGame.c  duckGame.h
Map/: background.c  background.h  bestscore.txt  character.c  character.h  collision.c  collision.h  collision.txt  constante.h  dialog.c  dialog.h  map.c  map.h  savescore.c  savescore.h
Marp-INFO/: presentation.md
Menu/: menu.c  menu.h
Ships/: Player_crosshair.h  Ship.h  Ships.c  Start_and_images.c  Start_and_images.h  const.h  game_ships.c  main.c
Snake/: constante.h  game.c  game.h  interface.c  interface.h  miam.c  miam.h  plateau.c  plateau.h  snake.c  snake.h
beatmaps/: 2Luke.osu  3cantina_band.osu  allegroInits.c  allegroInits.h
osu/: beatmap.c  beatmap.h  countdown.c  countdown.h  endgame.c  endgame.h  ingame.c  menu.c  menu.h  music.c  music.h  osugame.c  osugame.h
osu/beatmaps/: 10galaxy_collapse_dont_even_try_you_hear_me.osu  2Luke.osu
