cmake_minimum_required(VERSION 3.24)
project(osu C)
set(CMAKE_C_STANDARD 99)

add_executable(osu main.c beatmap.c beatmap.h beatmap.c music.c music.h music.c music.c ingame.c ingame.h menu.c menu.h countdown.c countdown.h countdown.h endgame.c endgame.h)
IF(WIN32)
    target_link_libraries(osu -lmingw32 -lallegro-5.0.10-monolith-md-debug)
ELSE()
    INCLUDE_DIRECTORIES(/opt/homebrew/Cellar/allegro/5.2.8.0_2/include)
    LINK_DIRECTORIES(/opt/homebrew/Cellar/allegro/5.2.8.0_2/lib)
    file(GLOB LIBRARIES "/opt/homebrew/Cellar/allegro/5.2.8.0_2/lib/*.dylib")
    message("LIBRARIES = ${LIBRARIES}")
    TARGET_LINK_LIBRARIES(osu ${LIBRARIES})
ENDIF(WIN32)
