cmake_minimum_required(VERSION 3.24)
project(osu C)
set(CMAKE_C_STANDARD 99)

add_executable(osu main.c osu/beatmap.c osu/beatmap.h osu/beatmap.c osu/music.c osu/music.h osu/music.c osu/music.c osu/ingame.c osu/ingame.h osu/menu.c osu/menu.h osu/countdown.c osu/countdown.h osu/countdown.h osu/endgame.c osu/endgame.h osugame.c osugame.h)
IF(WIN32)
    target_link_libraries(osu -lmingw32 -lallegro-5.0.10-monolith-md-debug)
ELSE()
    INCLUDE_DIRECTORIES(/opt/homebrew/Cellar/allegro/5.2.8.0_2/include)
    LINK_DIRECTORIES(/opt/homebrew/Cellar/allegro/5.2.8.0_2/lib)
    file(GLOB LIBRARIES "/opt/homebrew/Cellar/allegro/5.2.8.0_2/lib/*.dylib")
    message("LIBRARIES = ${LIBRARIES}")
    TARGET_LINK_LIBRARIES(osu ${LIBRARIES})
ENDIF(WIN32)
